@startuml
hide empty members
package GUI{
class MainWindow <<extends JFrame>>{
- contentPane : JPanel
- Layout : CardLayout
- navigator : ScreenNavigator
- modelHandle : DataModel 
- clientHandle : ClientController
+ MainWindow(model : DataModel, client : ClientController)
- initializeScreens() : void 
+ startup() : void
# getModel() : DataModel
# getClient() : ClientController

}

class ScreenNavigator{
- container : JPanel
- layout : CardLayout
+ ScreenNavigator(l: CardLayout, c : JPanel)
+ show(s : Screen) : void

}

class LoginScreen <<extends JPanel>>{
- controller : ScreenNavigator
+ LoginScreen(c : ScreenNavigator)
- initialize() : void
}

class UserScreen <<extends JPanel>>{
- controller : ScreenNavigator
+ UserScreen(c : ScreenNavigator)
- initialize() : void
}

class ITScreen <<extends JPanel>>{
- controller : ScreenNavigator
+ ITScreen(c : ScreenNavigator)
- initialize() : void
}

class AccountScreen <<extends JPanel>>{
- controller : ScreenNavigator
+ AccountScreen(c : ScreenNavigator)
- initialize() : void
}
enum Screens{
LOGIN
CLIENT
IT
ACCOUNT
}

}
MainWindow "1"*--"1" ScreenNavigator
ScreenNavigator "1"o--*"1" LoginScreen
ScreenNavigator "1"o--*"1" UserScreen
ScreenNavigator "1"o--*"1" ITScreen
ScreenNavigator "1"o--*"1" AccountScreen
ClientModel "Uses"<... GUI
ScreenNavigator "Uses"<.l.Screens
@enduml
